--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,17 +1,16 @@
 {{ define "main" }}
 
-<h1>About</h1>
+<h1>What is This?</h1>
 
 <p>
-Console is a minimal, responsive and light theme for Hugo inspired by Linux console.  <a href="about/">(more)</a>
+A vault of sendhiar's writing throughout the years. Talks about music, games, and stuff.
 </p>
-<br/>
 
-<h1>Latest posts</h1>
+<h1>Latest Updates</h1>
 
 <div class="posts-list">
 {{ with .Site.GetPage "/posts" }}
-    {{ range first 3 (sort .Data.Pages "Date" "desc" (where .Pages ".Params.private" "!=" true))}}
+    {{ range first 5 (sort .Data.Pages "Date" "desc" (where .Pages ".Params.private" "!=" true))}}
         <div class="post">
             <p>
                 <div class="date">{{ .PublishDate.Format "Jan. 2, 2006" }}</div>
@@ -23,7 +22,7 @@ Console is a minimal, responsive and light theme for Hugo inspired by Linux cons
 {{ end }}
 </div>
 
-<h1>Latest photos</h1>
+<!-- <h1>Latest Photos</h1>
 
 <div class="image-grid">
 {{ with .Site.GetPage "/photos" }}
@@ -37,6 +36,6 @@ Console is a minimal, responsive and light theme for Hugo inspired by Linux cons
         </a>
     {{ end }}
 {{ end }}
-</div>
+</div> -->
 
 {{ end }}
