--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -1,14 +1,44 @@
 {{ define "main" }}
 <h1>{{ .Title }}</h1>
 
-{{ .PublishDate.Format "Jan. 2, 2006" }}
-{{ with .Params.linkedin }}
+<div class="post-meta">
+    <div class="post-meta-left">
+        {{ .PublishDate.Format "Jan. 2, 2006" }}
+    </div>
+
+    <div class="post-meta-right">
+        <!-- {{ with .Params.categories }}
+            Categories: 
+            {{ range $index, $category := . }}
+                <a href="{{ "/categories/" | relURL }}{{ $category | urlize }}">{{ $category }}</a>{{ if lt (add $index 1) (len .) }}, {{ end }}
+            {{ end }}
+        {{ end }} -->
+        {{ with .Params.tags }}
+            Tags: 
+            {{ range $index, $tag := . }}
+                <a href="{{ "/tags/" | relURL }}{{ $tag | urlize }}">{{ $tag }}</a>{{ if lt (add $index 1) (len .) }}, {{ end }}
+            {{ end }}
+        {{ end }}
+    </div>
+</div>
+
+<!-- {{ with .Params.linkedin }}
     // <a href="{{ . }}">Linkedin</a>
 {{ end }}
 {{ with .Params.twitter }}
     // <a href="{{ . }}">Twitter</a>
 {{ end }}
-<br/><br/>
+<br/><br/> -->
+
+<!-- show featured image -->
+<!-- {{ $image := resources.Get (printf "images/%s" .Params.featured_image) }}
+{{ with $image }}
+    <img src="{{ ( $image.Resize "x500" ).RelPermalink }}" /><br />
+    <img src="{{ $image.RelPermalink }}" /><br />
+{{ end }} -->
+
+<!-- show article content -->
 {{ .Content }}
+
 {{ template "_internal/disqus.html" . }}
 {{ end }}
