--- a/static/hugo-theme-console/css/console.css
+++ b/static/hugo-theme-console/css/console.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Roboto Mono";
-    src: url("../font/RobotoMono-Regular.ttf") format("truetype");
+    src: url("../font/RobotoMono/RobotoMono-Regular.ttf") format("truetype");
     font-style: normal;
     font-weight: 400;
     text-rendering: optimizeLegibility;
@@ -8,7 +8,7 @@
 
 @font-face {
     font-family: "Roboto Mono";
-    src: url("../font/RobotoMono-Italic.ttf") format("truetype");
+    src: url("../font/RobotoMono/RobotoMono-Italic.ttf") format("truetype");
     font-style: italic;
     font-weight: 400;
     text-rendering: optimizeLegibility;
@@ -16,7 +16,7 @@
 
 @font-face {
     font-family: "Roboto Mono";
-    src: url("../font/RobotoMono-Bold.ttf") format("truetype");
+    src: url("../font/RobotoMono/RobotoMono-Bold.ttf") format("truetype");
     font-style: normal;
     font-weight: 700;
     text-rendering: optimizeLegibility;
@@ -24,11 +24,44 @@
 
 @font-face {
     font-family: "Roboto Mono";
-    src: url("../font/RobotoMono-BoldItalic.ttf") format("truetype");
+    src: url("../font/RobotoMono/RobotoMono-BoldItalic.ttf") format("truetype");
     font-style: italic;
     font-weight: 700;
     text-rendering: optimizeLegibility;
 }
+
+
+/* @font-face {
+    font-family: "JetBrains Mono";
+    src: url("../font/JetBrainsMono/JetBrainsMono-Medium.ttf") format("truetype");
+    font-style: normal;
+    font-weight: 400;
+    text-rendering: optimizeLegibility;
+}
+
+@font-face {
+    font-family: "JetBrains Mono";
+    src: url("../font/JetBrainsMono/JetBrainsMono-MediumItalic.ttf") format("truetype");
+    font-style: italic;
+    font-weight: 400;
+    text-rendering: optimizeLegibility;
+}
+
+@font-face {
+    font-family: "JetBrains Mono";
+    src: url("../font/JetBrainsMono/JetBrainsMono-Bold.ttf") format("truetype");
+    font-style: normal;
+    font-weight: 700;
+    text-rendering: optimizeLegibility;
+}
+
+@font-face {
+    font-family: "JetBrains Mono";
+    src: url("../font/JetBrainsMono/JetBrainsMono-BoldItalic.ttf") format("truetype");
+    font-style: italic;
+    font-weight: 700;
+    text-rendering: optimizeLegibility;
+} */
 
 :root {
     --global-font-size: 16px;
@@ -40,14 +73,16 @@
         DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace,
         serif;
     --global-line-height: 1.6em;
-    --page-width: 70em;
+    --page-width: 100em;
+    /* --page-width: 70em; */
     --display-h1-decoration: 1;
 }
 
 @media (prefers-color-scheme: dark) {
     :root {
 	--background-color: #222225;
-	--page-width: 60em;
+	--page-width: 100em;
+    /* --page-width: 60em; */
 	--font-color: #e8e9ed;
 	--invert-font-color: #222225;
 	--secondary-color: #a3abba;
@@ -79,7 +114,8 @@
         --global-font-size: 14px;
         --global-font-color: #444;
         --global-line-height: 1.6em;
-        --page-width: 70em;
+        --page-width: 100em;
+        /* --page-width: 70em; */
     }
 }
 
@@ -106,7 +142,7 @@ body {
     font-family: var(--font-stack);
     font-size: var(--global-font-size);
     background-color: var(--background-color);
-    margin-bottom: 75px;
+    margin-bottom: 25px;
 }
 
 h1,
@@ -192,12 +228,34 @@ figure {
     margin-right: 60px;
 }
 
-.footer {
+/* OG footer */
+/* .footer {
     clear: both;
-    margin-top: 100px;
+    margin-top: 50px;
     padding-top: 10px;
     border-top: 1px solid var(--secondary-color);
     color: var(--global-font-color);
+} */
+
+/* modified footer 1 */
+.footer {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    justify-content: space-between;
+    clear: both;
+    margin-top: 50px;
+    padding-top: 10px;
+    border-top: 1px solid var(--secondary-color);
+    color: var(--global-font-color);
+}
+
+.footer .left {
+    text-align: left;
+}
+
+.footer .right {
+    text-align: right;
 }
 
 .image-grid {
@@ -225,6 +283,30 @@ figure {
 .gallery-image {
     margin-top: 10px;
     margin-bottom: 10px;
+}
+
+/* Style for post metadata */
+.post-meta {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px; /* Add spacing below the metadata */
+    font-size: 0.9em; /* Adjust font size if needed */
+    color: white;
+}
+
+.post-meta-left {
+    text-align: left;
+}
+
+.post-meta-right {
+    text-align: right;
+}
+
+.post-meta-right a {
+    color: var(--primary-color); /* Ensure links are styled properly */
+    text-decoration: none;
+    margin-left: 5px; /* Add spacing between links */
 }
 
 .posts-list {
