--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,1 +1,3 @@
 <!-- Keep - override to add code to <header /> tag -->
+{{ template "_internal/opengraph.html" . }}
+{{ template "_internal/twitter_cards.html" . }}
