--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,4 +1,4 @@
 {{ define "main" }}
-<h1>Page not found</h1>
-<p><a href="{{ .Site.BaseURL }}">Return to the home page</a>.</p>
+<h1>404 - Page Not Found</h1>
+<p><a href="{{ .Site.BaseURL }}">Return to the home page</a></p>
 {{ end }}
