--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,3 +1,16 @@
 <!-- Keep - override to add code to <header /> tag -->
+
+<!-- Google Analytics -->
+<!-- {{ template "_internal/google_analytics.html" . }} -->
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-W6R2LTJLDG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-W6R2LTJLDG');
+</script>
+
 {{ template "_internal/opengraph.html" . }}
 {{ template "_internal/twitter_cards.html" . }}
