--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -7,7 +7,7 @@
 <footer class="footer">
     <div class="left">
         <!-- Left-aligned content -->
-        <p>🄯 {{ now.Year }} sendhiar</p>
+        <p>{{ now.Year }} - sendhiar</p>
     </div>
     <div class="right">
         <!-- Right-aligned content -->
