--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -7,7 +7,10 @@
 <footer class="footer">
     <div class="left">
         <!-- Left-aligned content -->
-        <p>{{ now.Year }} - sendhiar</p>
+        <!-- <p>{{ now.Year }} - sendhiar</p> -->
+        <p>{{ now.Year }} - Powered by <a href="https://gohugo.io/">Hugo</a> with
+        <a href="https://github.com/mrmierzejewski/hugo-theme-console/">Console Theme</a>
+        </p>
     </div>
     <div class="right">
         <!-- Right-aligned content -->
