--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,7 +3,7 @@
 <h1>What is This?</h1>
 
 <p>
-A vault of sendhiar's writing throughout the years. Talks about music, games, and stuff.
+A vault of sendhiar's writing throughout the years that is spread across the world-wide-web. Mostly talks about music.
 </p>
 
 <h1>Latest Updates</h1>
