--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -8,10 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
     <meta name="googlebot" content="index,follow,snippet,archive">
-    <meta name="description" content="{{ .Params.description }}" />
+    <meta name="description" content="A vault of sendhiar's writing throughout the years that is spread across the world-wide-web. Mostly talks about music." />
+    <meta name="author" content="sendhiar" />
+    <!-- <meta name="description" content="{{ .Params.description }}" />
+    <meta name="author" content="{{ .Params.author }}" /> -->
     
     <meta property="og:type" content="website" />
-    <meta name="author" content="{{ .Site.Params.author }}" />
+
     <script defer type="application/ld+json">
       {
         "@context": "http://sendhiar.github.io",
