--- a/static/hugo-theme-console/css/console.css
+++ b/static/hugo-theme-console/css/console.css
@@ -77,6 +77,13 @@
     --display-h1-decoration: 1;
 }
 
+/* Hide terminal breadcrumb on smaller screens */
+@media only screen and (max-width: 850px) {
+    .terminal-logo {
+        display: none;
+    }
+}
+
 @media (prefers-color-scheme: dark) {
     :root {
 	--background-color: #222225;
