--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -47,13 +47,27 @@
 <body class="terminal">
     <div class="container">
         <div class="terminal-nav">
+          
+          <!-- terminal breadcrumb -->
           <header class="terminal-logo">
             <div class="logo terminal-prompt">
               {{ $url := replace .Permalink ( printf "%s" .Site.BaseURL) "" }}
               {{ $.Scratch.Add "path" .Site.BaseURL }}
               <a href="{{ .Site.BaseURL }}" class="no-style {{ with .Site.Params.TitleCutting }}site-name{{ end }}">{{ .Site.Title }}</a>:~# 
-              {{ range $index, $element := split $url "/" }}{{ $.Scratch.Add "path" $element }}{{ if ne $element "" }}<a href='{{ $.Scratch.Get "path" | absURL }}'>{{ . }}</a>/{{ $.Scratch.Add "path" "/" }}{{ end }}{{ end }}</div></header>
-          <nav class="terminal-menu">
+              <!-- OG sub-path -->
+              <!-- {{ range $index, $element := split $url "/" }}{{ $.Scratch.Add "path" $element }}{{ if ne $element "" }}<a href='{{ $.Scratch.Get "path" | absURL }}'>{{ . }}</a>/{{ $.Scratch.Add "path" "/" }}{{ end }}{{ end }} -->
+              <div class="breadcrumb-subpath">
+                {{ range $index, $element := split $url "/" }}
+                    {{ $.Scratch.Add "path" $element }}
+                    {{ if ne $element "" }}
+                        <a href='{{ $.Scratch.Get "path" | absURL }}'>{{ . }}</a>/{{ $.Scratch.Add "path" "/" }}
+                    {{ end }}
+                {{ end }}
+              </div>
+            </div>
+          </header>
+
+              <nav class="terminal-menu">
             <ul vocab="https://schema.org/" typeof="BreadcrumbList">
                 {{ range .Site.Params.navlinks }}
                 <li>
