--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -55,15 +55,7 @@
               {{ $.Scratch.Add "path" .Site.BaseURL }}
               <a href="{{ .Site.BaseURL }}" class="no-style {{ with .Site.Params.TitleCutting }}site-name{{ end }}">{{ .Site.Title }}</a>:~# 
               <!-- OG sub-path -->
-              <!-- {{ range $index, $element := split $url "/" }}{{ $.Scratch.Add "path" $element }}{{ if ne $element "" }}<a href='{{ $.Scratch.Get "path" | absURL }}'>{{ . }}</a>/{{ $.Scratch.Add "path" "/" }}{{ end }}{{ end }} -->
-              <div class="breadcrumb-subpath">
-                {{ range $index, $element := split $url "/" }}
-                    {{ $.Scratch.Add "path" $element }}
-                    {{ if ne $element "" }}
-                        <a href='{{ $.Scratch.Get "path" | absURL }}'>{{ . }}</a>/{{ $.Scratch.Add "path" "/" }}
-                    {{ end }}
-                {{ end }}
-              </div>
+              {{ range $index, $element := split $url "/" }}{{ $.Scratch.Add "path" $element }}{{ if ne $element "" }}<a href='{{ $.Scratch.Get "path" | absURL }}'>{{ . }}</a>/{{ $.Scratch.Add "path" "/" }}{{ end }}{{ end }}
             </div>
           </header>
 
