--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -41,7 +41,7 @@
     {{ end }}
     {{- partial "opengraph.html" . -}}
     {{- partial "twitter_cards.html" . -}}
-    {{ template "_internal/google_analytics.html" . }}
+    <!-- {{ template "_internal/google_analytics.html" . }} -->
 
     {{- partial "header.html" . -}}
 </head>
