update footer, about, description

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,7 +3,7 @@
 <h1>What is This?</h1>
 
 <p>
-A vault of sendhiar's writing throughout the years that is spread across the world-wide-web. Mostly talks about music.
+A vault of Sendhi's writing throughout the years that is scattered around the World Wide Web. Mostly talks about music.
 </p>
 
 <h1>Latest Updates</h1>
