--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -7,9 +7,9 @@
 <footer class="footer">
     <div class="left">
         <!-- Left-aligned content -->
-        <!-- <p>{{ now.Year }} - sendhiar</p> -->
-        <p>{{ now.Year }} - Powered by <a href="https://gohugo.io/">Hugo</a> with
-        <a href="https://github.com/mrmierzejewski/hugo-theme-console/">Console Theme</a>
+        <p>(c) {{ now.Year }} sendhiar</p>
+        <!-- <p>{{ now.Year }} - Powered by <a href="https://gohugo.io/">Hugo</a> with
+        <a href="https://github.com/mrmierzejewski/hugo-theme-console/">Console Theme</a> -->
         </p>
     </div>
     <div class="right">
